--- a/.github/workflows/notify-mono.yml
+++ b/.github/workflows/notify-mono.yml
@@ -17,6 +17,6 @@
 #
 #          curl -X POST \
 #            -H "Accept: application/vnd.github.v3+json" \
-#            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+#            -H "Authorization: token ${{ secrets.MONO_REPO_PAT }}" \
 #            "https://api.github.com/repos/$MONO_REPO/dispatches" \
 #            -d '{"event_type":"sync-from-original", "client_payload": {"repo_name": "'"$(basename $GITHUB_REPOSITORY)"'"}}'
