--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,3 @@
-# genie_coder_monorepo/pubspec.yaml
-
 name: genie_coder_monorepo
 description: Genie Coder Dart/Flutter package monorepo
 version: 0.0.1
@@ -12,11 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Shared dependencies across all packages
-  cloud_firestore: ^6.0.0
-
-dependency_overrides:
-  cloud_firestore: ^6.0.0
+#  # Shared dependencies across all packages
+#  cloud_firestore: ^6.0.0
+#
+#dependency_overrides:
+#  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   melos: ^6.3.3
