--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,23 +12,49 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # This is critical! The action needs to check out the repository with a Personal Access Token (PAT)
+          # that has write permissions to create new commits and tags.
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.32.8'
 
-
-      - name: Activate Melos globally
+      - name: Install Melos
         run: flutter pub global activate melos
 
-      - name: Bootstrap packages
-        run: flutter pub global run melos bootstrap
+      - name: Run Melos bootstrap
+        run: melos bootstrap
 
-      - name: Version packages
-        run: flutter pub global run melos version --yes
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Publish packages
-        run: flutter pub global run melos publish --yes
+      - name: Install Conventional Changelog Melos Plugin
+        run: |
+          npm install -g conventional-changelog-cli
+          npm install --prefix . melos-changelog
+
+      - name: Version packages and create changelog
+        id: version
+        run: melos version --yes --no-push
+        # Make sure your pub.dev token is available as an environment variable
         env:
-          PUB_CREDENTIALS: ${{ secrets.MONO_REPO_PAT }}
+          PUB_CREDENTIALS: ${{ secrets.PUB_CREDENTIALS }}
+
+      - name: Push changes and tags
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "chore: version bump and changelog"
+          git push
+          git push --tags
+
+      - name: Publish to pub.dev
+        run: melos publish --yes
+        env:
+          PUB_CREDENTIALS: ${{ secrets.PUB_CREDENTIALS }}
